Week 2 lecture examples; fixed seminar 1 compile error.